# yalora

./: .gitignore  ChangeLog  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Coord.cpp  Coord.hpp  Makefile.am  Makefile.in  remapselfie.cpp  selfie.cpp  yalora.cpp
