ACLOCAL_AMFLAGS=-I m4

noinst_HEADERS =

MANPAGES = 

man_MANS = ${MANPAGES}

EXTRA_DIST = ${MANPAGES}

bin_PROGRAMS = yalora

yalora_SOURCES = yalora.cpp
yalora_LDADD = ${LIBMAUS2LIBS}
yalora_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS}
yalora_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}
