ACLOCAL_AMFLAGS=-I m4

noinst_HEADERS =

MANPAGES = 

man_MANS = ${MANPAGES}

EXTRA_DIST = ${MANPAGES}

bin_PROGRAMS = yalora selfie remapselfie

yalora_SOURCES = yalora.cpp
yalora_LDADD = ${LIBMAUS2LIBS}
yalora_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS}
yalora_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

selfie_SOURCES = selfie.cpp
selfie_LDADD = ${LIBMAUS2LIBS}
selfie_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS}
selfie_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

remapselfie_SOURCES = remapselfie.cpp
remapselfie_LDADD = ${LIBMAUS2LIBS}
remapselfie_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS}
remapselfie_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}
